Fix tab styling on mobile

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Content/Tabs/Tabs.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Content/Tabs/Tabs.scss
@@ -14,6 +14,7 @@
         text-align: center;
         line-height: 48px;
         height: 48px;
+        flex-shrink: 0;
         padding: 0;
         margin: 0;
         text-transform: uppercase;
